--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('Assets/resume-example.pdf')"
+            onclick="window.open('https://github.com/devarazz/Deva-Portfolio-/blob/main/Assets/resume-example.pdf')"
           >
             Download CV
           </button>
